<resources>
    <string name="app_name">Movie Catalogue Lydia</string>
    <string name="title_home">Movie</string>
    <string name="title_dashboard">TvShow</string>
    <string name="title_notifications">Favorite</string>
    <string name="movie">Movie</string>
    <string name="TvShow">TvShow</string>
    <string name="desc" translatable="false">High schoolers Mitsuha and Taki are complete strangers living separate lives. But one night, they suddenly switch places. Mitsuha wakes up in Taki’s body, and he in hers. This bizarre occurrence continues to happen randomly, and the two must adjust their lives around each other.</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="vote_count">Vote Count</string>
    <string name="strip" translatable="false">-</string>
    <string name="settings">Settings</string>
    <string name="notfound">Not Found</string>
    <string name="result">Result for : </string>
    <string name="null_result">not found</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="daily_reminder">Daily Remainder</string>
    <string name="release_reminder">Release Remainder</string>
    <string name="key_daily" translatable="false">key_daily</string>
    <string name="key_relase" translatable="false">key_release</string>
    <string name="daily_reminder_message">See what new movie today</string>
    <string name="release_reminder_message">Release Today</string>


</resources>
